# hexaware-agenctic-ai-101

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  hexaware-assessment-1.docx  main.py  pyproject.toml
day-01/: 2-chatbot-with-oop.py  agentic_ai_oop_labs.md  python_oop_60_min_lesson_plan.docx
day-01/12-concepts-longer-adv/: 01_encapsulation.py  07_metaclasses.py  08_mro.py
day-01/12-concepts-shorter-adv/: 01_encapsulation.py  03_polymorphism.py  12_slots.py
day-01/12-concepts-shorter-beginners/: 01_encapsulation.py  02_inheritance.py  04_abstraction.py  08_mro.py  09_dataclasses.py  10_mixins.py  11_context_managers.py
day-02/async-programming/: 1-the-event-loop.py  2-coroutine.py  3-task.py  5.3-synchronization-primitive-event.py  6-bonus-async-functions.py
day-04/: 4-w2v.py  6-visualize-vector-hf.py  9-neural-networks.py
day-05/: 11-attention-2.py  12-attention-softmax.py
day-06/ft/: 202606211128_LoRA.ipynb
day-08/1-chatbot-wom/: app.py
day-08/2-chatbot-with-memory/: app.py
day-09/3-chatbot-with-system-prompt/: system_prompt.py
day-1/: 1-chatbot-without-oop.py  12-concepts-of-oop.md  3-chatbot-with-memory.py
day-1/12-concepts-longer-adv/: 02_inheritance.py  03_polymorphism.py  04_abstraction.py  05_magic_methods.py  06_properties.py  09_dataclasses.py  10_mixins.py  11_context_managers.py  12_slots.py
day-1/12-concepts-shorter-adv/: 02_inheritance.py  04_abstraction.py  05_magic_methods.py  06_properties.py  07_metaclasses.py  08_mro.py  09_dataclasses.py  10_mixins.py  11_context_managers.py
day-1/12-concepts-shorter-beginners/: 03_polymorphism.py  05_magic_methods.py  06_properties.py  07_metaclasses.py  12_slots.py
day-10/code/: 01a_chunking_fixed_size.py  01b_chunking_fixed_size_overlap.py  01c_chunking_sentence_based.py  01d_chunking_recursive.py  docs_utils.py  (+1 more)
day-12/: Semantic_Kernel_Slides.html
day-13/backend/: pyproject.toml
day-13/backend/app/: config.py  kernel_setup.py
day-13/backend/app/data/: orders.json  users.json
day-13/backend/app/data/documents/: faq_account.md  faq_payments.md  policies_privacy.md  policies_returns.md  policies_shipping.md  policies_warranty.md  products_catalog.md  support_troubleshooting.md
day-3/: 2-exception-handling.py  3-configuration-mgmt.py  config.json
day-4/: 2-vector.py  3-embedding.py  5-visualize-vector-ollama.py  7-weights.py  8-parameters.py
day-5/: 10-attention-query-vector.py  13-next-token.py
day-6/: LLM_Quantization_Pruning.pptx  LoRA_QLoRA_Presentation.pptx
(+74 files in other folders)
