[project]
name = "hexaware-agenctic-ai-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "dotenv>=0.9.9",
    "gradio>=6.19.0",
    "langchain-cerebras>=0.8.2",
    "matplotlib>=3.11.0",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]
