[project]
name = "hexaware-agenctic-ai-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "google-genai>=2.11.0",
    "gradio>=6.19.0",
    "kernel>=0.76.0",
    "langchain>=1.3.13",
    "langchain-cerebras>=0.8.2",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.11.0",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "pydantic>=2.13.4,<2.14",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "semantic>=1.0.3",
    "semantic-kernel>=1.44.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "uvicorn>=0.49.0",
]

[tool.uv.workspace]
members = [
    "day-13/backend",
]
