[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "semantic-kernel>=1.44.0",
    "uvicorn>=0.49.0",
]
